packages/pytov/pytov-0.3.3.tar.gz/pytov-0.3.3/pytov/PytovParser.py
# Generated from Pytov.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class PytovParser ( Parser ):

    grammarFileName = "Pytov.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'['", "']'", "':'", "','", 
                     "'='", "'if'", "'elif'", "'else if'", "'else'", "'case'", 
                     "'default:'", "'switch'", "'global'", "'while'", "'for'", 
                     "'in'", "'func'", "'function'", "'def'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'&&'", "'||'", 
                     "'!'", "<INVALID>", "<INVALID>", "'++'", "'--'", "'+'", 
                     "'-'", "'**'", "'*'", "'/'", "'/_'", "'%'", "'>'", 
                     "'>='", "'<'", "'<='", "'=='", "'!='", "'('", "')'", 
                     "'return'", "'break'", "<INVALID>", "<INVALID>", "'{'", 
                     "'}'", "<INVALID>", "';'", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "COMMENT", "LINE_COMMENT_C", 
                      "LINE_COMMENT_P", "AND", "OR", "NOT", "TRUE", "FALSE", 
                      "INC", "DEC", "ADD", "SUBTRACT", "POWER", "MULT", 
                      "DIVIDE", "FLOOR_DIVISION", "MODULO", "GT", "GE", 
                      "LT", "LE", "EQ", "NOT_EQ", "LPAREN", "RPAREN", "RETURN", 
                      "BREAK", "DECIMAL", "IDENTIFIER", "OPEN_CURLY", "CLOSE_CURLY", 
                      "WS", "SEMI_COLON", "NEW_LINE" ]

    RULE_parse = 0
    RULE_allCode = 1
    RULE_seperators = 2
    RULE_exp = 3
    RULE_atom = 4
    RULE_importp = 5
    RULE_listr = 6
    RULE_dictKV = 7
    RULE_dictKVs = 8
    RULE_dictr = 9
    RULE_incDec = 10
    RULE_beforeIncDec = 11
    RULE_inc = 12
    RULE_dec = 13
    RULE_opCpBn = 14
    RULE_notl = 15
    RULE_identifier = 16
    RULE_decimal = 17
    RULE_string = 18
    RULE_comparator = 19
    RULE_binary = 20
    RULE_operator = 21
    RULE_index = 22
    RULE_indexOverwrite = 23
    RULE_boolTF = 24
    RULE_ifStatement = 25
    RULE_breakp = 26
    RULE_switchCase = 27
    RULE_switchDefault = 28
    RULE_switchStatement = 29
    RULE_identifierList = 30
    RULE_declaration = 31
    RULE_declarationList = 32
    RULE_variableDeclaration = 33
    RULE_expList = 34
    RULE_parameterList = 35
    RULE_parameterInputList = 36
    RULE_whileStatement = 37
    RULE_forStatement = 38
    RULE_nonPythonForStatement = 39
    RULE_funcDeclaration = 40
    RULE_funcCall = 41
    RULE_methodCall = 42
    RULE_returnp = 43
    RULE_statement = 44
    RULE_block = 45
    RULE_openCurly = 46
    RULE_closeCurly = 47

    ruleNames =  [ "parse", "allCode", "seperators", "exp", "atom", "importp", 
                   "listr", "dictKV", "dictKVs", "dictr", "incDec", "beforeIncDec", 
                   "inc", "dec", "opCpBn", "notl", "identifier", "decimal", 
                   "string", "comparator", "binary", "operator", "index", 
                   "indexOverwrite", "boolTF", "ifStatement", "breakp", 
                   "switchCase", "switchDefault", "switchStatement", "identifierList", 
                   "declaration", "declarationList", "variableDeclaration", 
                   "expList", "parameterList", "parameterInputList", "whileStatement", 
                   "forStatement", "nonPythonForStatement", "funcDeclaration", 
                   "funcCall", "methodCall", "returnp", "statement", "block", 
                   "openCurly", "closeCurly" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    STRING=22
    COMMENT=23
    LINE_COMMENT_C=24
    LINE_COMMENT_P=25
    AND=26
    OR=27
    NOT=28
    TRUE=29
    FALSE=30
    INC=31
    DEC=32
    ADD=33
    SUBTRACT=34
    POWER=35
    MULT=36
    DIVIDE=37
    FLOOR_DIVISION=38
    MODULO=39
    GT=40
    GE=41
    LT=42
    LE=43
    EQ=44
    NOT_EQ=45
    LPAREN=46
    RPAREN=47
    RETURN=48
    BREAK=49
    DECIMAL=50
    IDENTIFIER=51
    OPEN_CURLY=52
    CLOSE_CURLY=53
    WS=54
    SEMI_COLON=55
    NEW_LINE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PytovParser.EOF, 0)

        def allCode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.AllCodeContext)
            else:
                return self.getTypedRuleContext(PytovParser.AllCodeContext,i)


        def getRuleIndex(self):
            return PytovParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = PytovParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.allCode()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PytovParser.T__0) | (1 << PytovParser.T__1) | (1 << PytovParser.T__6) | (1 << PytovParser.T__10) | (1 << PytovParser.T__11) | (1 << PytovParser.T__12) | (1 << PytovParser.T__13) | (1 << PytovParser.T__14) | (1 << PytovParser.T__15) | (1 << PytovParser.T__17) | (1 << PytovParser.T__18) | (1 << PytovParser.T__19) | (1 << PytovParser.STRING) | (1 << PytovParser.NOT) | (1 << PytovParser.TRUE) | (1 << PytovParser.FALSE) | (1 << PytovParser.INC) | (1 << PytovParser.DEC) | (1 << PytovParser.LPAREN) | (1 << PytovParser.RETURN) | (1 << PytovParser.BREAK) | (1 << PytovParser.DECIMAL) | (1 << PytovParser.IDENTIFIER) | (1 << PytovParser.OPEN_CURLY) | (1 << PytovParser.SEMI_COLON) | (1 << PytovParser.NEW_LINE))) != 0)):
                    break

            self.state = 101
            self.match(PytovParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seperators(self):
            return self.getTypedRuleContext(PytovParser.SeperatorsContext,0)


        def statement(self):
            return self.getTypedRuleContext(PytovParser.StatementContext,0)


        def declaration(self):
            return self.getTypedRuleContext(PytovParser.DeclarationContext,0)


        def exp(self):
            return self.getTypedRuleContext(PytovParser.ExpContext,0)


        def getRuleIndex(self):
            return PytovParser.RULE_allCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllCode" ):
                listener.enterAllCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllCode" ):
                listener.exitAllCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllCode" ):
                return visitor.visitAllCode(self)
            else:
                return visitor.visitChildren(self)




    def allCode(self):

        localctx = PytovParser.AllCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_allCode)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.seperators()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.exp(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeperatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self):
            return self.getToken(PytovParser.NEW_LINE, 0)

        def SEMI_COLON(self):
            return self.getToken(PytovParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return PytovParser.RULE_seperators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeperators" ):
                listener.enterSeperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeperators" ):
                listener.exitSeperators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeperators" ):
                return visitor.visitSeperators(self)
            else:
                return visitor.visitChildren(self)




    def seperators(self):

        localctx = PytovParser.SeperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_seperators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==PytovParser.SEMI_COLON or _la==PytovParser.NEW_LINE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PytovParser.RULE_exp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FdivExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # Token
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def FLOOR_DIVISION(self):
            return self.getToken(PytovParser.FLOOR_DIVISION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFdivExpression" ):
                listener.enterFdivExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFdivExpression" ):
                listener.exitFdivExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFdivExpression" ):
                return visitor.visitFdivExpression(self)
            else:
                return visitor.visitChildren(self)


    class PowExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # Token
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def POWER(self):
            return self.getToken(PytovParser.POWER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpression" ):
                listener.enterPowExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpression" ):
                listener.exitPowExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpression" ):
                return visitor.visitPowExpression(self)
            else:
                return visitor.visitChildren(self)


    class ModExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # Token
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def MODULO(self):
            return self.getToken(PytovParser.MODULO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModExpression" ):
                listener.enterModExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModExpression" ):
                listener.exitModExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModExpression" ):
                return visitor.visitModExpression(self)
            else:
                return visitor.visitChildren(self)


    class OpCpBnExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # OpCpBnContext
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def opCpBn(self):
            return self.getTypedRuleContext(PytovParser.OpCpBnContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpCpBnExpression" ):
                listener.enterOpCpBnExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpCpBnExpression" ):
                listener.exitOpCpBnExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpCpBnExpression" ):
                return visitor.visitOpCpBnExpression(self)
            else:
                return visitor.visitChildren(self)


    class NotExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def notl(self):
            return self.getTypedRuleContext(PytovParser.NotlContext,0)

        def exp(self):
            return self.getTypedRuleContext(PytovParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpression" ):
                listener.enterNotExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpression" ):
                listener.exitNotExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpression" ):
                return visitor.visitNotExpression(self)
            else:
                return visitor.visitChildren(self)


    class DivExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # Token
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def DIVIDE(self):
            return self.getToken(PytovParser.DIVIDE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivExpression" ):
                listener.enterDivExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivExpression" ):
                listener.exitDivExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivExpression" ):
                return visitor.visitDivExpression(self)
            else:
                return visitor.visitChildren(self)


    class ParenExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(PytovParser.LPAREN, 0)
        def exp(self):
            return self.getTypedRuleContext(PytovParser.ExpContext,0)

        def RPAREN(self):
            return self.getToken(PytovParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpression" ):
                listener.enterParenExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpression" ):
                listener.exitParenExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpression" ):
                return visitor.visitParenExpression(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(PytovParser.FuncCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallExpression" ):
                listener.enterFuncCallExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallExpression" ):
                listener.exitFuncCallExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallExpression" ):
                return visitor.visitFuncCallExpression(self)
            else:
                return visitor.visitChildren(self)


    class BeforeIncDecExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def beforeIncDec(self):
            return self.getTypedRuleContext(PytovParser.BeforeIncDecContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeforeIncDecExpression" ):
                listener.enterBeforeIncDecExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeforeIncDecExpression" ):
                listener.exitBeforeIncDecExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeforeIncDecExpression" ):
                return visitor.visitBeforeIncDecExpression(self)
            else:
                return visitor.visitChildren(self)


    class AtomExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(PytovParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomExpression" ):
                listener.enterAtomExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomExpression" ):
                listener.exitAtomExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpression" ):
                return visitor.visitAtomExpression(self)
            else:
                return visitor.visitChildren(self)


    class MultExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.left = None # ExpContext
            self.op = None # Token
            self.right = None # ExpContext
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PytovParser.ExpContext)
            else:
                return self.getTypedRuleContext(PytovParser.ExpContext,i)

        def MULT(self):
            return self.getToken(PytovParser.MULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultExpression" ):
                listener.enterMultExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultExpression" ):
                listener.exitMultExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultExpression" ):
                return visitor.visitMultExpression(self)
            else:
                return visitor.visitChildren(self)


    class IndexExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def index(self):
            return self.getTypedRuleContext(PytovParser.IndexContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexExpression" ):
                listener.enterIndexExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexExpression" ):
                listener.exitIndexExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexExpression" ):
                return visitor.visitIndexExpression(self)
            else:
                return visitor.visitChildren(self)


    class IncDecExpressionContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PytovParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def incDec(self):
            return self.getTypedRuleContext(PytovParser.IncDecContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncDecExpression" ):
                listener.enterIncDecExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncDecExpression" ):
                listener.exitIncDecExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncDecExpression" ):
                return visitor.visitIncDecExpression(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PytovParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = PytovParser.ParenExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 112
                self.match(PytovParser.LPAREN)
                self.state = 113
                self.exp(0)
                self.state = 114
                self.match(PytovParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = PytovParser.NotExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.notl()
                self.state = 117
                self.exp(6)
                pass

            elif la_ == 3:
                localctx = PytovParser.IndexExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 119
                self.index()
                pass

            elif la_ == 4:
                localctx = PytovParser.AtomExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 120
                self.atom()
                pass

            elif la_ == 5:
                localctx = PytovParser.FuncCallExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 121
                self.funcCall()
                pass

            elif la_ == 6:
                localctx = PytovParser.IncDecExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 122
                self.incDec()
                pass

            elif la_ == 7:
                localctx = PytovParser.BeforeIncDecExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 123
                self.beforeIncDec()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 147
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 145
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = PytovParser.PowExpressionContext(self, PytovParser.ExpContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 126
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 127
                        localctx.op = self.match(PytovParser.POWER)
                        self.state = 128
                        localctx.right = self.exp(13)
                        pass

                    elif la_ == 2:
                        localctx = PytovParser.MultExpressionContext(self, PytovParser.ExpContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 129
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 130
                        localctx.op = self.match(PytovParser.MULT)
                        self.state = 131
                        localctx.right = self.exp(12)
                        pass

                    elif la_ == 3:
                        localctx = PytovParser.DivExpressionContext(self, PytovParser.ExpContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 132
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 133
                        localctx.op = self.match(PytovParser.DIVIDE)
                        self.state = 134
                        localctx.right = self.exp(11)
                        pass

                    elif la_ == 4:
                        localctx = PytovParser.FdivExpressionContext(self, PytovParser.ExpContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 135
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
